fix: fix link text in Safari got broken into two lines
This commit is an attempt to fix this problem since I don't have an iOS
device.

--- a/src/assets/scss/components/_link.scss
+++ b/src/assets/scss/components/_link.scss
@@ -10,6 +10,7 @@
   width: fit-content;
   height: fit-content;
   color: map-get(var.$color--primary, gold);
+  word-break: keep-all;
   text-decoration: none;
   background-color: transparent;
   border: 1px solid transparent;
